fix: add styles for disabled primary button to enhance visibility

--- a/css/site.css
+++ b/css/site.css
@@ -1250,6 +1250,11 @@ span.tn-events-keyword-filter__keyword-button.btn.btn-xs.btn-default {
   font-weight: 500;
 }
 
+.btn-primary.disabled {
+  background-color: #000 !important;
+  color: #fff !important;
+}
+
 .btn-dark:hover,
 .btn-dark:active,
 .btn-dark:focus {
